test/files/neg/t2870.check
<<<<<<< HEAD
t2870.scala:1: error: not found: type Jar
=======
t2870.scala:1: error: not found: type Jar (similar: Jars)
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
class Jars(jar: Jar)
                ^
t2870.scala:6: error: illegal cyclic reference involving value <import>
  val scala = fromClasspathString(javaClassPath) 
                                  ^
two errors found
